--- a/frontend/src/MyComp/style.css
+++ b/frontend/src/MyComp/style.css
@@ -114,3 +114,14 @@ padding: 30px ;
     width: 300px;
 
 } */
+.habout{
+    margin-right: 900px;
+}
+.subcards{
+    height:405px;
+    width: 612px;
+}
+.register-cards{
+    height:444px;
+    width: 664.34px;
+}
