--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,10 @@ body {
     font-family: "Poppins', sans-serif";
     font-size: 20px;
     font-weight: 6000;
+    width: 100%;
     height: 69.5px;
+   
+   
   }
   /* LOGO CARDS */
   .event-description-cards{
