--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,102 +1,96 @@
 body {
-  
-    overflow-x: hidden;
-  }
-  /* COLOR */
-  .color-1{
-    background-color:#17223B;
+  overflow-x: hidden;
+ 
 }
-.color-2{
-    background-color: #263859;
+/* COLOR */
+.color-1 {
+  background-color: #17223b;
 }
-.color-3{
-        background-color: #6B778D;
+.color-2 {
+  background-color: #263859;
+}
+.color-3 {
+  background-color: #6b778d;
+}
+.color-4 {
+  background-color: #ff6768;
 }
 
-.color-4{
-    background-color: #FF6768;
-    
+/* CARD CLASSES */
+.Cards {
+  height: 380px;
+  width: 410px;
 }
-  
-  /* CARD CLASSES */
-  .Cards {
-    height: 380px;
-    width: 410px;
-  }
-  .Cards img {
-    width: 100%;
-    height: 100%;
-  }
-  .color-4-button {
-    text-decoration: none;
-    background-color: #ff6768;
-    color: #ffffff;
-    border-radius: 5px;
-    width: 100px;
-    padding: 5px;
-    height: fit-content;
-  }
-  .color-2-button {
-    text-decoration: none;
-    background-color: #17223b;
-    color: #ffffff;
-    border-radius: 5px;
-    width: 100px;
-    padding: 5px;
-    height: fit-content;
-  }
-  /* CAROUSEL CLASSES */
-  .carousel-img-height {
-    height: 700px;
-  }
-  /* NAVBAR CLASSES */
-  .Navbar {
-    font-family: "Poppins', sans-serif";
-    font-size: 20px;
-    font-weight: 6000;
-    width: 100%;
-    height: 69.5px;
-   
-   
-  }
-  /* LOGO CARDS */
-  .event-description-cards{
-      width: 430px;
-      height: 355px;;
-  }
-  .logo{
-      height: 100px;
-      width: 150px;
-  }
-  .border-radius{
-      border-radius: 30px;
-  }
-  /* SUB-EVENT-CLASSES */
-  .subevents{
-      width: 1060px;
-      padding: 30px ;
-  }
-  .subevents-btn-m{
-     
-          margin-left: 700px ;
-      
-  }
-  /* SCHEDULE */
-  .sr{
-      width: 1060px;
-      height: 500px;
-  }
-    /* FORM */
-    .form{
-      border-style: solid;
-      border-width: 1px;
-      padding: 30px;
-      width: 800px;
-      
-      /* margin-right: 500; */
-  }
-  /* EVENTS */
-  .event-image{
-    height:405px;
-    width: 612px;
+.Cards img {
+  width: 100%;
+  height: 100%;
+}
+.color-4-button {
+  text-decoration: none;
+  background-color: #ff6768;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 100px;
+  padding: 5px;
+  height: fit-content;
+}
+.color-2-button {
+  text-decoration: none;
+  background-color: #17223b;
+  color: #ffffff;
+  border-radius: 5px;
+  width: 100px;
+  padding: 5px;
+  height: fit-content;
+}
+/* CAROUSEL CLASSES */
+.carousel-img-height {
+  height: 700px;
+}
+/* NAVBAR CLASSES */
+.Navbar {
+  font-family: "Poppins', sans-serif";
+  font-size: 20px;
+  font-weight: 6000;
+  height: 69.5px;
+}
+/* LOGO CARDS */
+.event-description-cards {
+  width: 430px;
+  height: 355px;
+}
+.logo {
+  height: 50px;
+}
+.border-radius {
+  border-radius: 30px;
+}
+/* SUB-EVENT-CLASSES */
+.subevents {
+  width: 1060px;
+  padding: 30px;
+}
+/* SCHEDULE */
+.sr {
+  width: 1060px;
+  height: 500px;
+}
+/* FORM */
+.form {
+  border-style: solid;
+  border-width: 1px;
+  padding: 30px;
+  width: 800px;
+
+  /* margin-right: 500; */
+}
+/* EVENTS */
+.event-image {
+  height: 405px;
+  width: 612px;
+}
+
+/* ZEAL */
+.zeal-title {
+  font-size: 65px !important;
 }
