--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,7 +17,7 @@ body {
   background-color: #6b778d;
 }
 .color-4 {
-  background-color: #ff6768;
+  background-color: #af3200;
 }
 
 /* CARD CLASSES */
@@ -31,7 +31,7 @@ body {
 }
 .color-4-button {
   text-decoration: none;
-  background-color: #ff6768;
+  background-color: #af3200;
   color: #ffffff;
   border-radius: 5px;
   width: 100px;
